set up of resume skeleton, footer, header, badges

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
         "moduleDetection": "force",
         "baseUrl": ".",
         "paths": {
-            "@lib/*": ["src/lib/*"]
+            "@lib/*": ["src/lib/*"],
+            "@assets/*": ["src/assets/*"]
         }
     },
     "include": ["src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
