--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "svelte-check": "^4.0.5",
         "typescript": "~5.6.2",
         "vite": "^5.4.10",
-        "vitest": "^2.1.4"
+        "vitest": "^2.1.4",
+        "jsdom": "^25.0.1"
     }
 }
