--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "devDependencies": {
         "@catppuccin/tailwindcss": "^0.1.6",
         "@iconify/svelte": "^4.0.2",
+        "@modyfi/vite-plugin-yaml": "^1.1.0",
         "@sveltejs/vite-plugin-svelte": "^4.0.0",
         "@tsconfig/svelte": "^5.0.4",
         "@types/node": "^22.9.0",
