--- a/src/static/cvContent.yml
+++ b/src/static/cvContent.yml
@@ -214,7 +214,6 @@ main_content:
                   href: https://www.linkedin.com/in/vincent-lagache/
         about:
             title: "A propos de ce CV"
-            content: "Ce curriculum vitae a été développé par mes soins. Vous pourrez trouver son code source 
-              <a href='https://github.com/vlagache/cv' target='_blank' class='underline link'>ici</a>
-              et l'article que j'ai écrit à propos de sa conception technique <a href='https://medium.com/@vlagache' target='_blank' class='underline link'>ici</a>."
+            content: "Ce curriculum vitae a été développé par mes soins. Il est visible en ligne <a href='https://vlagache.github.io/cv/' target='_blank' class='underline link'>ici</a>
+              et vous pourrez trouver son code source <a href='https://github.com/vlagache/cv' target='_blank' class='underline link'>ici</a>."
 footer:
